objects/tfn_Conservation_Asset_Management__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Action_Description__c</fullName>
        <formula>tfn_Threat_and_Action__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Action_Name__c</fullName>
        <formula>TEXT( tfn_Threat_and_Action__r.Action_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Action_Priority__c</fullName>
        <formula>TEXT( tfn_Threat_and_Action__r.tfn_Threat_Managemen_tAction_Priority__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Asset_Name__c</fullName>
        <formula>TRIM(tfn_Conservation_Asset__r.tfn_EVC_Name_Official__c  &amp;  tfn_Conservation_Asset__r.tfn_Species_Scientific_Name__c &amp;  tfn_Conservation_Asset__r.tfn_Ecological_Community__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Asset_Record_Type__c</fullName>
        <formula>tfn_Conservation_Asset__r.RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Cons_Asset_Mgt_ID__c</fullName>
        <displayFormat>CAM{0000}</displayFormat>
        <label>Cons Asset Mgt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_Conservation_Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Conservation Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.tfn_Interest__c</field>
                <operation>equals</operation>
                <valueField>tfn_Species_EVC_Observation__c.tfn_Interest__c</valueField>
            </filterItems>
            <infoMessage>Only EVCs and Species observed on this property/covenant will be displayed in this search</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Species_EVC_Observation__c</referenceTo>
        <relationshipLabel>Conservation Assets Management</relationshipLabel>
        <relationshipName>Conservation_Assets_Management</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipLabel>Conservation Assets Management</relationshipLabel>
        <relationshipName>Conservation_Assets_Management</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Man_Action_Targeted_Species__c</fullName>
        <formula>tfn_Threat_and_Action__r.tfn_Target_Species_Common_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Man Action Targeted Species</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Threat_Class__c</fullName>
        <formula>TEXT( tfn_Threat_and_Action__r.tfn_Threat_Class__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Threat Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Threat_Name__c</fullName>
        <formula>TEXT(tfn_Threat_and_Action__r.tfn_Threat_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Threat Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Threat_and_Action__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Threat and Action</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Threats and Management Actions created for this covenant will be displayed in this search</errorMessage>
            <filterItems>
                <field>$Source.tfn_Interest__c</field>
                <operation>equals</operation>
                <valueField>tfn_Management_Action__c.tfn_Interest__c</valueField>
            </filterItems>
            <infoMessage>Only Threats and Management Actions created for this covenant will be displayed in this search</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Management_Action__c</referenceTo>
        <relationshipLabel>Conservation Assets Management</relationshipLabel>
        <relationshipName>Conservation_Assets_Management</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Conservation Asset Management</label>
    <nameField>
        <label>Conservation Asset Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conservation Assets Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>